force-app/main/default/objects/Activity_Station__c/Activity_Station__c.object-meta.xml
<CustomObject>
    <label>Activity Station</label>
    <nameField>
        <label>Activity Station Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Activity Stations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>