force-app/main/default/objects/Activity_Station__c/fields/Program_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Program_Engagement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Engagement</label>
    <referenceTo>Program_Engagement__c</referenceTo>
    <relationshipLabel>Activity Stations</relationshipLabel>
    <relationshipName>Activity_Stations</relationshipName>
    <type>Lookup</type>
</CustomField>