force-app/main/default/objects/Activity_Station__c/fields/Second_Choice_Station_One__c.field-meta.xml
<CustomField>
    <fullName>Second_Choice_Station_One__c</fullName>
    <label>Second Choice Station 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gym Wheel</fullName>
            </value>
            <value>
                <fullName>Trapeze</fullName>
            </value>
            <value>
                <fullName>Silks</fullName>
            </value>
            <value>
                <fullName>Tumbling</fullName>
            </value>
            <value>
                <fullName>Jump Rope</fullName>
            </value>
            <value>
                <fullName>Balance</fullName>
            </value>
            <value>
                <fullName>Open to any of the above skills!</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>